[2단계 - 출석 다시 구현하기] 윌슨(박형균) 미션 제출합니다.  (#156)
* docs(README): 기능 구현 목록 초안 작성

* chore: csv 파일 추가

* 🟢green(FileManager): 파일 매니저 구현

* 🟢green(DateTimeParser): 날짜 변환기 구현

* 🟢green(CampusHoliday): 캠퍼스 휴일 관리 enum 구현

* 🟢green(CampusTime): 캠퍼스 운영시간 관리 enum 구현

* 🛠️refactor(CampusHoliday): 프로덕션 레벨로 이동

* 🔴red(AttendanceDate): 등교일을 관리하는 클래스 레드 테스트

* 🟢green(AttendanceDate): 등교일을 관리하는 클래스 그린 테스트

* 🔴red(AttendanceTime): 캠퍼스 운영 시간 관리 클래스 레드 테스트

* 🟢green(AttendanceTime): 캠퍼스 운영 시간을 관리하는 클래스 그린 테스트

* 🔴red(ClassTime): 강의 시간 관리 enum 레드 테스트

* 🟢green(ClassTime): 강의 시간 관리 enum 그린 테스트

* 🟢green(AttendanceStatus): 출석 상태 관리 enum 그린 테스트

* 🛠️refactor(AttendanceDate): DayOfWeek 게터 추가

* 🛠️refactor(AttendanceTime): localTime 게터 추가

* 🟢green(Attendance): 출석 객체 그린 테스트

* 🛠️refactor(Attendance): 레코드로 변경

* 🛠️refactor(Attendance): of() 메서드 매개변수 시그니처 변경 및 내부 로직 수정

* 🛠️refactor(Attendance, AttendanceDate): equals(), hashCode() 재정의

* 🔴red(Crew): 크루 객체 레드 테스트

* 🟢green(Crew): 크루 객체 그린 테스트

* 🛠️refactor(DateTimeParser): LocalDate를 M월 d일 E요일로 파싱하는 메서드 추가

* 🛠️refactor(DateTimeParser): KoreanFormat으로 파싱 하는 메서드들 추가

* 🛠️refactor(ClassDayOff): CampusHoliday를 ClassDayOff로 변경

* 🛠️refactor: 에러 메세지 추가

* 🟢green(Crew): 크루 객체 그린 테스트

* 🔴red(CrewGroup): 크루 그룹 객체 레드 테스트

* 🟢green(CrewGroup): 크루 그룹 객체 그린 테스트

* 🔴red(CrewsGenerator): 크루 초기화 객체 레드 테스트

* 🛠️refactor(Crew): 게터 추가

* 🟢green(CrewsGenerator): csv파일을 읽어 크루를 생성하는 기능 그린 테스트

* 🛠️refactor(Crew): 출석 기록 존재 확인 메서드 추가

* 🟢green(AttendanceBook): 크루 출석 확인 그린 테스트

* 🛠️refactor(DateTimeParser): LocalTime파서 및 예외처리 로직 추가

* 🛠️refactor(AttendanceDate): 게터 추가

* 🛠️refactor(DateTimeParser, DateTimeConvertor): 포맷으로 변환하는 로직 DateTimeConvertor로 분리

* 🛠️refactor: Attendance 클래스명을 AttendanceRecord로 변경

* 🔴red(AttendanceRecordGenerator): 출석기록 생성기 레드 테스트

* 🟢green(AttendanceRecordGenerator): 출석기록 생성기 그린 테스트

* 🛠️refactor(AttendanceRecordGenerator): generate() 매개변수 제거 및 startDate 필드 변수로 선언

* 🛠️refactor(CrewsGenerator): 크루 생성시 12월 1일 기준으로 미리 생성된 출석 기록 사용

* 🛠️refactor(A